--- a/多机场分流.yaml
+++ b/多机场分流.yaml
@@ -202,7 +202,7 @@ proxy-groups:
       - 🚀 低倍节点
       - 🚀 手动切换
 
-  - name: "🎧 Shopify"
+  - name: "🎧 Spotify"
     type: select
     proxies:
       - 🇸🇬 狮城低倍
@@ -224,7 +224,7 @@ proxy-groups:
       - 🚀 手动切换
 
   - name: "📺 Emby"
-    type: fallback
+    type: select
     proxies:
       - 🌏 守候线路
       - 🌏 ACA线路
@@ -1205,11 +1205,11 @@ rule-providers:
     path: ./ruleset/Twitter.yaml
     interval: 86400
 
-  Shopify:
+  Spotify:
     type: http
     behavior: classical
-    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Shopify/Shopify.yaml"
-    path: ./ruleset/Shopify.yaml
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.yaml"
+    path: ./ruleset/Spotify.yaml
     interval: 86400
 
   TikTok:
@@ -1314,7 +1314,7 @@ rules:
   - RULE-SET,Discord,🤝 Discord
   - RULE-SET,Facebook,🤝 Facebook
   - RULE-SET,Twitter,🤝 Twitter
-  - RULE-SET,Shopify,🎧 Shopify
+  - RULE-SET,Spotify,🎧 Spotify
   - RULE-SET,TikTok,📺 TikTok
   - RULE-SET,Netflix,📺 Netflix
   - RULE-SET,Emby,📺 Emby
