--- a/多机场分流_emoji.yaml
+++ b/多机场分流_emoji.yaml
@@ -1,31 +1,77 @@
-port: 7890
-socks-port: 7891
-redir-port: 7892
-mixed-port: 7893
-allow-lan: false
-mode: Rule
-log-level: info
 ipv6: true
-hosts: null
+allow-lan: true
+mixed-port: 7890
+unified-delay: false
+tcp-concurrent: true
+external-controller: 127.0.0.1:9090
+external-ui: ui
+external-ui-url: "https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.zip"
+
+geodata-mode: true
+geox-url:
+  geoip: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip-lite.dat"
+  geosite: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat"
+  mmdb: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country-lite.mmdb"
+
+find-process-mode: strict
+global-client-fingerprint: chrome
+
+profile:
+  store-selected: true
+  store-fake-ip: true
+
+sniffer:
+  enable: true
+  sniff:
+    HTTP:
+      ports: [80, 8080-8880]
+      override-destination: true
+    TLS:
+      ports: [443, 8443]
+    QUIC:
+      ports: [443, 8443]
+  skip-domain:
+    - "Mijia Cloud"
+
+tun:
+  enable: true
+  stack: mixed
+  dns-hijack:
+    - "any:53"
+  auto-route: true
+  auto-detect-interface: true
+
 dns:
-    enable: true
-    ipv6: true
-    listen: '0.0.0.0:1053'
-    use-hosts: true
-    default-nameserver: [119.29.29.29, 8.8.8.8, 1.1.1.1]
-    nameserver: [223.5.5.5, 119.29.29.29]
-    fake-ip-range: 198.18.0.1/16
-    fake-ip-filter: ['*.lan', '*.localdomain', '*.example', '*.invalid', '*.localhost', '*.test', '*.local', '*.home.arpa', 'time.*.com', 'time.*.gov', 'time.*.edu.cn', 'time.*.apple.com', 'time1.*.com', 'time2.*.com', 'time3.*.com', 'time4.*.com', 'time5.*.com', 'time6.*.com', 'time7.*.com', 'ntp.*.com', 'ntp1.*.com', 'ntp2.*.com', 'ntp3.*.com', 'ntp4.*.com', 'ntp5.*.com', 'ntp6.*.com', 'ntp7.*.com', '*.time.edu.cn', '*.ntp.org.cn', +.pool.ntp.org, time1.cloud.tencent.com, 'stun.*.*', 'stun.*.*.*', swscan.apple.com, mesu.apple.com, music.163.com, '*.music.163.com', '*.126.net', musicapi.taihe.com, music.taihe.com, songsearch.kugou.com, trackercdn.kugou.com, '*.kuwo.cn', api-jooxtt.sanook.com, api.joox.com, y.qq.com, '*.y.qq.com', streamoc.music.tc.qq.com, mobileoc.music.tc.qq.com, isure.stream.qqmusic.qq.com, dl.stream.qqmusic.qq.com, aqqmusic.tc.qq.com, amobile.music.tc.qq.com, localhost.ptlogin2.qq.com, '*.msftconnecttest.com', '*.msftncsi.com', '*.xiami.com', '*.music.migu.cn', music.migu.cn, +.wotgame.cn, +.wggames.cn, +.wowsgame.cn, +.wargaming.net, '*.*.*.srv.nintendo.net', '*.*.stun.playstation.net', 'xbox.*.*.microsoft.com', '*.*.xboxlive.com', '*.ipv6.microsoft.com', 'teredo.*.*.*', 'teredo.*.*', speedtest.cros.wr.pvp.net, +.jjvip8.com, www.douyu.com, activityapi.huya.com, activityapi.huya.com.w.cdngslb.com, www.bilibili.com, api.bilibili.com, a.w.bilicdn1.com]
-external-controller: '127.0.0.1:9090'
+  enable: true
+  listen: :1053
+  ipv6: true
+  enhanced-mode: fake-ip
+  fake-ip-filter:
+    - "*"
+    - "+.lan"
+    - "+.local"
+  nameserver:
+    - https://doh.pub/dns-query
+    - https://dns.alidns.com/dns-query
+  proxy-server-nameserver:
+    - https://doh.pub/dns-query
+  nameserver-policy:
+    "geosite:cn,private":
+      - https://doh.pub/dns-query
+      - https://dns.alidns.com/dns-query
+    "geosite:geolocation-!cn":
+      - "https://dns.cloudflare.com/dns-query#dns"
+      - "https://dns.google/dns-query#dns"
+
 clash-for-android:
     append-system-dns: false
 
 # 机场
 proxy-providers:
-  🛫 ****:
+  ✈️ ****:
     type: http
     url: "****"
-    interval: 172800
+    interval: 86400
     path: ./****.yaml
     health-check:
       enable: true
@@ -33,10 +79,10 @@ proxy-providers:
       # lazy: true
       url: http://www.gstatic.com/generate_204
       
-  🛫 ****:
+  ✈️ ****:
     type: http
     url: "****"
-    interval: 172800
+    interval: 86400
     path: ./****.yaml
     health-check:
       enable: true
@@ -44,10 +90,10 @@ proxy-providers:
       # lazy: true
       url: http://www.gstatic.com/generate_204
 
-  🛫 ****:
+  ✈️ ****:
     type: http
     url: "****"
-    interval: 172800
+    interval: 86400
     path: ./****.yaml
     health-check:
       enable: true
@@ -55,10 +101,10 @@ proxy-providers:
       # lazy: true
       url: http://www.gstatic.com/generate_204
 
-  🛫 ****:
+  ✈️ ****:
     type: http
     url: "****"
-    interval: 172800
+    interval: 86400
     path: ./****.yaml
     health-check:
       enable: true
@@ -66,10 +112,10 @@ proxy-providers:
       # lazy: true
       url: http://www.gstatic.com/generate_204
 
-  🛫 ****:
+  ✈️ ****:
     type: http
     url: "*****"
-    interval: 172800
+    interval: 86400
     path: ./****.yaml
     health-check:
       enable: true
@@ -103,10 +149,10 @@ proxy-groups:
   - name: "🚀 手动切换"
     type: select
     use:
-      - 🛫 守候网络
-      - 🛫 MESL
-      - 🛫 CTC
-      - 🛫 ETON
+      - ✈️ 守候网络
+      - ✈️ MESL
+      - ✈️ CTC
+      - ✈️ ETON
 
   - name: "⚛️ AI"
     type: select
@@ -430,8 +476,8 @@ proxy-groups:
   - name: "🇭🇰 香港游戏"
     type: url-test
     use:
-      - 🛫 MESL
-      - 🛫 ETON
+      - ✈️ MESL
+      - ✈️ ETON
     filter: "(HK).*((?i)(udpn)|(iepl))"
     health-check:
     enable: true
@@ -443,8 +489,8 @@ proxy-groups:
   - name: "🇹🇼 台湾游戏"
     type: url-test
     use:
-      - 🛫 MESL
-      - 🛫 ETON
+      - ✈️ MESL
+      - ✈️ ETON
     filter: "(TW).*((?i)(udpn)|(iepl))"
     health-check:
     enable: true
@@ -456,8 +502,8 @@ proxy-groups:
   - name: "🇸🇬 狮城游戏"
     type: url-test
     use:
-      - 🛫 MESL
-      - 🛫 ETON
+      - ✈️ MESL
+      - ✈️ ETON
     filter: "(SG).*((?i)(udpn)|(iepl))"
     health-check:
     enable: true
@@ -469,8 +515,8 @@ proxy-groups:
   - name: "🇯🇵 日本游戏"
     type: url-test
     use:
-      - 🛫 MESL
-      - 🛫 ETON
+      - ✈️ MESL
+      - ✈️ ETON
     filter: "(JP).*((?i)(udpn)|(iepl))"
     health-check:
     enable: true
@@ -482,8 +528,8 @@ proxy-groups:
   - name: "🇺🇲 美国游戏"
     type: url-test
     use:
-      - 🛫 MESL
-      - 🛫 ETON
+      - ✈️ MESL
+      - ✈️ ETON
     filter: "(US).*((?i)(udpn)|(iepl))"
     health-check:
     enable: true
@@ -495,8 +541,8 @@ proxy-groups:
   - name: "🇰🇷 韩国游戏"
     type: url-test
     use:
-      - 🛫 MESL
-      - 🛫 ETON
+      - ✈️ MESL
+      - ✈️ ETON
     filter: "(KR).*((?i)(udpn)|(iepl))"
     health-check:
     enable: true
@@ -511,7 +557,7 @@ proxy-groups:
   - name: "🇭🇰 守候低倍"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(HK).*(0.[1-9])"
     health-check:
     enable: true
@@ -523,7 +569,7 @@ proxy-groups:
   - name: "🇭🇰 MESL低倍"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(HK).*(0.[1-9])"
     health-check:
     enable: true
@@ -535,7 +581,7 @@ proxy-groups:
   - name: "🇭🇰 CTC低倍"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(HK).*(0.[1-9])"
     health-check:
     enable: true
@@ -548,7 +594,7 @@ proxy-groups:
   - name: "🇹🇼 守候低倍"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(TW).*(0.[1-9])"
     health-check:
     enable: true
@@ -560,7 +606,7 @@ proxy-groups:
   - name: "🇹🇼 MESL低倍"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(TW).*(0.[1-9])"
     health-check:
     enable: true
@@ -572,7 +618,7 @@ proxy-groups:
   - name: "🇹🇼 CTC低倍"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(TW).*(0.[1-9])"
     health-check:
     enable: true
@@ -585,7 +631,7 @@ proxy-groups:
   - name: "🇸🇬 守候低倍"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(SG).*(0.[1-9])"
     health-check:
     enable: true
@@ -597,7 +643,7 @@ proxy-groups:
   - name: "🇸🇬 MESL低倍"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(SG).*(0.[1-9])"
     health-check:
     enable: true
@@ -609,7 +655,7 @@ proxy-groups:
   - name: "🇸🇬 CTC低倍"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(SG).*(0.[1-9])"
     health-check:
     enable: true
@@ -622,7 +668,7 @@ proxy-groups:
   - name: "🇯🇵 守候低倍"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(JP).*(0.[1-9])"
     health-check:
     enable: true
@@ -634,7 +680,7 @@ proxy-groups:
   - name: "🇯🇵 MESL低倍"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(JP).*(0.[1-9])"
     health-check:
     enable: true
@@ -646,7 +692,7 @@ proxy-groups:
   - name: "🇯🇵 CTC低倍"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(JP).*(0.[1-9])"
     health-check:
     enable: true
@@ -659,7 +705,7 @@ proxy-groups:
   - name: "🇺🇲 守候低倍"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(US).*(0.[1-9])"
     health-check:
     enable: true
@@ -671,7 +717,7 @@ proxy-groups:
   - name: "🇺🇲 MESL低倍"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(US).*(0.[1-9])"
     health-check:
     enable: true
@@ -683,7 +729,7 @@ proxy-groups:
   - name: "🇺🇲 CTC低倍"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(US).*(0.[1-9])"
     health-check:
     enable: true
@@ -696,7 +742,7 @@ proxy-groups:
   - name: "🇰🇷 守候低倍"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(Korea).*(0.[1-9])"
     health-check:
     enable: true
@@ -708,7 +754,7 @@ proxy-groups:
   - name: "🇰🇷 MESL低倍"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(KR).*(0.[1-9])"
     health-check:
     enable: true
@@ -720,7 +766,7 @@ proxy-groups:
   - name: "🇰🇷 CTC低倍"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(KR).*(0.[1-9])"
     health-check:
     enable: true
@@ -733,7 +779,7 @@ proxy-groups:
   - name: "🇭🇰 守候高级"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(HK).*((?i)(IPLC))"
     health-check:
     enable: true
@@ -745,7 +791,7 @@ proxy-groups:
   - name: "🇭🇰 MESL高级"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(HK)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -757,7 +803,7 @@ proxy-groups:
   - name: "🇭🇰 CTC高级"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(HK)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -770,7 +816,7 @@ proxy-groups:
   - name: "🇹🇼 守候高级"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(TW).*((?i)(IPLC))"
     health-check:
     enable: true
@@ -782,7 +828,7 @@ proxy-groups:
   - name: "🇹🇼 MESL高级"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(TW)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -794,7 +840,7 @@ proxy-groups:
   - name: "🇹🇼 CTC高级"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(TW)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -807,7 +853,7 @@ proxy-groups:
   - name: "🇸🇬 守候高级"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(SG).*((?i)(IPLC))"
     health-check:
     enable: true
@@ -819,7 +865,7 @@ proxy-groups:
   - name: "🇸🇬 MESL高级"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(SG)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -831,7 +877,7 @@ proxy-groups:
   - name: "🇸🇬 CTC高级"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(SG)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -844,7 +890,7 @@ proxy-groups:
   - name: "🇯🇵 守候高级"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(JP).*((?i)(IPLC))"
     health-check:
     enable: true
@@ -856,7 +902,7 @@ proxy-groups:
   - name: "🇯🇵 MESL高级"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(JP)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -868,7 +914,7 @@ proxy-groups:
   - name: "🇯🇵 CTC高级"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(JP)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -881,7 +927,7 @@ proxy-groups:
   - name: "🇺🇲 守候高级"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(US).*((?i)(IPLC))"
     health-check:
     enable: true
@@ -893,7 +939,7 @@ proxy-groups:
   - name: "🇺🇲 MESL高级"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(US)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -905,7 +951,7 @@ proxy-groups:
   - name: "🇺🇲 CTC高级"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(US)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -918,7 +964,7 @@ proxy-groups:
   - name: "🇰🇷 守候高级"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(Korea).*((?i)(IPLC))"
     health-check:
     enable: true
@@ -930,7 +976,7 @@ proxy-groups:
   - name: "🇰🇷 MESL高级"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(KR)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -942,7 +988,7 @@ proxy-groups:
   - name: "🇰🇷 CTC高级"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(KR)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -954,7 +1000,7 @@ proxy-groups:
   - name: "🌏 守候线路"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(?i)(hk|tw|sg|jp).*(0.[1-9])"
     health-check:
     enable: true
@@ -966,7 +1012,7 @@ proxy-groups:
   - name: "🌏 ACA线路"
     type: url-test
     use:
-      - 🛫 ACA
+      - ✈️ ACA
     filter: "(?i)(emby|lite)"
     health-check:
     enable: true
