--- a/多机场分流_ICON.yaml
+++ b/多机场分流_ICON.yaml
@@ -7,6 +7,12 @@ external-controller: 127.0.0.1:9090
 external-ui: ui
 external-ui-url: "https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.zip"
 
+geodata-mode: true
+geox-url:
+  geoip: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip-lite.dat"
+  geosite: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat"
+  mmdb: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country-lite.mmdb"
+
 find-process-mode: strict
 global-client-fingerprint: chrome
 
@@ -26,6 +32,7 @@ sniffer:
       ports: [443, 8443]
   skip-domain:
     - "Mijia Cloud"
+
 tun:
   enable: true
   stack: mixed
@@ -39,23 +46,20 @@ dns:
   listen: :1053
   ipv6: true
   enhanced-mode: fake-ip
-  fake-ip-range: 28.0.0.1/8
   fake-ip-filter:
     - "*"
     - "+.lan"
     - "+.local"
-  default-nameserver:
-    - 223.5.5.5
   nameserver:
     - https://doh.pub/dns-query
     - https://dns.alidns.com/dns-query
   proxy-server-nameserver:
     - https://doh.pub/dns-query
   nameserver-policy:
-    "rule-set:cn_domain,private":
+    "geosite:cn,private":
       - https://doh.pub/dns-query
       - https://dns.alidns.com/dns-query
-    "rule-set:geolocation-!cn":
+    "geosite:geolocation-!cn":
       - "https://dns.cloudflare.com/dns-query#dns"
       - "https://dns.google/dns-query#dns"
 
@@ -64,10 +68,10 @@ clash-for-android:
 
 # 机场
 proxy-providers:
-  🛫 ****:
+  ✈️ ****:
     type: http
     url: "****"
-    interval: 172800
+    interval: 86400
     path: ./****.yaml
     health-check:
       enable: true
@@ -75,10 +79,10 @@ proxy-providers:
       # lazy: true
       url: http://www.gstatic.com/generate_204
       
-  🛫 ****:
+  ✈️ ****:
     type: http
     url: "****"
-    interval: 172800
+    interval: 86400
     path: ./****.yaml
     health-check:
       enable: true
@@ -86,10 +90,10 @@ proxy-providers:
       # lazy: true
       url: http://www.gstatic.com/generate_204
 
-  🛫 ****:
+  ✈️ ****:
     type: http
     url: "****"
-    interval: 172800
+    interval: 86400
     path: ./****.yaml
     health-check:
       enable: true
@@ -97,10 +101,10 @@ proxy-providers:
       # lazy: true
       url: http://www.gstatic.com/generate_204
 
-  🛫 ****:
+  ✈️ ****:
     type: http
     url: "****"
-    interval: 172800
+    interval: 86400
     path: ./****.yaml
     health-check:
       enable: true
@@ -108,10 +112,10 @@ proxy-providers:
       # lazy: true
       url: http://www.gstatic.com/generate_204
 
-  🛫 ****:
+  ✈️ ****:
     type: http
     url: "*****"
-    interval: 172800
+    interval: 86400
     path: ./****.yaml
     health-check:
       enable: true
@@ -147,10 +151,10 @@ proxy-groups:
   - name: "手动切换"
     type: select
     use:
-      - 🛫 守候网络
-      - 🛫 MESL
-      - 🛫 CTC
-      - 🛫 ETON
+      - ✈️ 守候网络
+      - ✈️ MESL
+      - ✈️ CTC
+      - ✈️ ETON
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Proxy.png
 
   - name: "AI"
@@ -500,8 +504,8 @@ proxy-groups:
   - name: "🇭🇰 香港游戏"
     type: url-test
     use:
-      - 🛫 MESL
-      - 🛫 ETON
+      - ✈️ MESL
+      - ✈️ ETON
     filter: "(HK).*((?i)(udpn)|(iepl))"
     health-check:
     enable: true
@@ -513,8 +517,8 @@ proxy-groups:
   - name: "🇹🇼 台湾游戏"
     type: url-test
     use:
-      - 🛫 MESL
-      - 🛫 ETON
+      - ✈️ MESL
+      - ✈️ ETON
     filter: "(TW).*((?i)(udpn)|(iepl))"
     health-check:
     enable: true
@@ -526,8 +530,8 @@ proxy-groups:
   - name: "🇸🇬 狮城游戏"
     type: url-test
     use:
-      - 🛫 MESL
-      - 🛫 ETON
+      - ✈️ MESL
+      - ✈️ ETON
     filter: "(SG).*((?i)(udpn)|(iepl))"
     health-check:
     enable: true
@@ -539,8 +543,8 @@ proxy-groups:
   - name: "🇯🇵 日本游戏"
     type: url-test
     use:
-      - 🛫 MESL
-      - 🛫 ETON
+      - ✈️ MESL
+      - ✈️ ETON
     filter: "(JP).*((?i)(udpn)|(iepl))"
     health-check:
     enable: true
@@ -552,8 +556,8 @@ proxy-groups:
   - name: "🇺🇲 美国游戏"
     type: url-test
     use:
-      - 🛫 MESL
-      - 🛫 ETON
+      - ✈️ MESL
+      - ✈️ ETON
     filter: "(US).*((?i)(udpn)|(iepl))"
     health-check:
     enable: true
@@ -565,8 +569,8 @@ proxy-groups:
   - name: "🇰🇷 韩国游戏"
     type: url-test
     use:
-      - 🛫 MESL
-      - 🛫 ETON
+      - ✈️ MESL
+      - ✈️ ETON
     filter: "(KR).*((?i)(udpn)|(iepl))"
     health-check:
     enable: true
@@ -581,7 +585,7 @@ proxy-groups:
   - name: "🇭🇰 守候低倍"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(HK).*(0.[1-9])"
     health-check:
     enable: true
@@ -593,7 +597,7 @@ proxy-groups:
   - name: "🇭🇰 MESL低倍"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(HK).*(0.[1-9])"
     health-check:
     enable: true
@@ -605,7 +609,7 @@ proxy-groups:
   - name: "🇭🇰 CTC低倍"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(HK).*(0.[1-9])"
     health-check:
     enable: true
@@ -618,7 +622,7 @@ proxy-groups:
   - name: "🇹🇼 守候低倍"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(TW).*(0.[1-9])"
     health-check:
     enable: true
@@ -630,7 +634,7 @@ proxy-groups:
   - name: "🇹🇼 MESL低倍"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(TW).*(0.[1-9])"
     health-check:
     enable: true
@@ -642,7 +646,7 @@ proxy-groups:
   - name: "🇹🇼 CTC低倍"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(TW).*(0.[1-9])"
     health-check:
     enable: true
@@ -655,7 +659,7 @@ proxy-groups:
   - name: "🇸🇬 守候低倍"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(SG).*(0.[1-9])"
     health-check:
     enable: true
@@ -667,7 +671,7 @@ proxy-groups:
   - name: "🇸🇬 MESL低倍"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(SG).*(0.[1-9])"
     health-check:
     enable: true
@@ -679,7 +683,7 @@ proxy-groups:
   - name: "🇸🇬 CTC低倍"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(SG).*(0.[1-9])"
     health-check:
     enable: true
@@ -692,7 +696,7 @@ proxy-groups:
   - name: "🇯🇵 守候低倍"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(JP).*(0.[1-9])"
     health-check:
     enable: true
@@ -704,7 +708,7 @@ proxy-groups:
   - name: "🇯🇵 MESL低倍"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(JP).*(0.[1-9])"
     health-check:
     enable: true
@@ -716,7 +720,7 @@ proxy-groups:
   - name: "🇯🇵 CTC低倍"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(JP).*(0.[1-9])"
     health-check:
     enable: true
@@ -729,7 +733,7 @@ proxy-groups:
   - name: "🇺🇲 守候低倍"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(US).*(0.[1-9])"
     health-check:
     enable: true
@@ -741,7 +745,7 @@ proxy-groups:
   - name: "🇺🇲 MESL低倍"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(US).*(0.[1-9])"
     health-check:
     enable: true
@@ -753,7 +757,7 @@ proxy-groups:
   - name: "🇺🇲 CTC低倍"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(US).*(0.[1-9])"
     health-check:
     enable: true
@@ -766,7 +770,7 @@ proxy-groups:
   - name: "🇰🇷 守候低倍"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(Korea).*(0.[1-9])"
     health-check:
     enable: true
@@ -778,7 +782,7 @@ proxy-groups:
   - name: "🇰🇷 MESL低倍"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(KR).*(0.[1-9])"
     health-check:
     enable: true
@@ -790,7 +794,7 @@ proxy-groups:
   - name: "🇰🇷 CTC低倍"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(KR).*(0.[1-9])"
     health-check:
     enable: true
@@ -803,7 +807,7 @@ proxy-groups:
   - name: "🇭🇰 守候高级"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(HK).*((?i)(IPLC))"
     health-check:
     enable: true
@@ -815,7 +819,7 @@ proxy-groups:
   - name: "🇭🇰 MESL高级"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(HK)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -827,7 +831,7 @@ proxy-groups:
   - name: "🇭🇰 CTC高级"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(HK)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -840,7 +844,7 @@ proxy-groups:
   - name: "🇹🇼 守候高级"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(TW).*((?i)(IPLC))"
     health-check:
     enable: true
@@ -852,7 +856,7 @@ proxy-groups:
   - name: "🇹🇼 MESL高级"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(TW)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -864,7 +868,7 @@ proxy-groups:
   - name: "🇹🇼 CTC高级"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(TW)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -877,7 +881,7 @@ proxy-groups:
   - name: "🇸🇬 守候高级"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(SG).*((?i)(IPLC))"
     health-check:
     enable: true
@@ -889,7 +893,7 @@ proxy-groups:
   - name: "🇸🇬 MESL高级"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(SG)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -901,7 +905,7 @@ proxy-groups:
   - name: "🇸🇬 CTC高级"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(SG)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -914,7 +918,7 @@ proxy-groups:
   - name: "🇯🇵 守候高级"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(JP).*((?i)(IPLC))"
     health-check:
     enable: true
@@ -926,7 +930,7 @@ proxy-groups:
   - name: "🇯🇵 MESL高级"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(JP)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -938,7 +942,7 @@ proxy-groups:
   - name: "🇯🇵 CTC高级"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(JP)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -951,7 +955,7 @@ proxy-groups:
   - name: "🇺🇲 守候高级"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(US).*((?i)(IPLC))"
     health-check:
     enable: true
@@ -963,7 +967,7 @@ proxy-groups:
   - name: "🇺🇲 MESL高级"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(US)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -975,7 +979,7 @@ proxy-groups:
   - name: "🇺🇲 CTC高级"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(US)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -988,7 +992,7 @@ proxy-groups:
   - name: "🇰🇷 守候高级"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(Korea).*((?i)(IPLC))"
     health-check:
     enable: true
@@ -1000,7 +1004,7 @@ proxy-groups:
   - name: "🇰🇷 MESL高级"
     type: url-test
     use:
-      - 🛫 MESL
+      - ✈️ MESL
     filter: "(KR)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -1012,7 +1016,7 @@ proxy-groups:
   - name: "🇰🇷 CTC高级"
     type: url-test
     use:
-      - 🛫 CTC
+      - ✈️ CTC
     filter: "(KR)(?!.*(0.[1-9]))"
     health-check:
     enable: true
@@ -1024,7 +1028,7 @@ proxy-groups:
   - name: "🌏 守候线路"
     type: url-test
     use:
-      - 🛫 守候网络
+      - ✈️ 守候网络
     filter: "(?i)(hk|tw|sg|jp).*(0.[1-9])"
     health-check:
     enable: true
@@ -1036,7 +1040,7 @@ proxy-groups:
   - name: "🌏 ACA线路"
     type: url-test
     use:
-      - 🛫 ACA
+      - ✈️ ACA
     filter: "(?i)(emby|lite)"
     health-check:
     enable: true
