--- a/多机场分流双图标.yaml
+++ b/多机场分流双图标.yaml
@@ -1,20 +1,45 @@
-ipv6: true
-allow-lan: true
-mixed-port: 7890
-unified-delay: false
+ipv6: ture
+unified-delay: true
 tcp-concurrent: true
-external-controller: 127.0.0.1:9090
-external-ui: ui
-external-ui-url: "https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.zip"
-
-geodata-mode: true
-geox-url:
-  geoip: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip-lite.dat"
-  geosite: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat"
-  mmdb: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country-lite.mmdb"
-
 find-process-mode: strict
 global-client-fingerprint: chrome
+clash-for-android:
+  append-system-dns: false
+
+tun:
+  enable: true
+  stack: mixed
+  dns-hijack:
+    - "any:53"
+  auto-route: true
+  auto-detect-interface: true
+
+dns:
+  enable: true
+  listen: :1053
+  ipv6: true
+  enhanced-mode: fake-ip
+  fake-ip-range: 28.0.0.1/8
+  fake-ip-filter:
+    - "*"
+    - "+.lan"
+    - "+.local"
+  default-nameserver:
+    - 223.5.5.5
+    - 223.6.6.6
+    - 119.29.29.29
+  nameserver:
+    - https://doh.pub/dns-query
+    - https://dns.alidns.com/dns-query
+  proxy-server-nameserver:
+    - https://doh.pub/dns-query
+  nameserver-policy:
+    "rule-set:cn_domain,private":
+      - https://doh.pub/dns-query
+      - https://dns.alidns.com/dns-query
+    "rule-set:geolocation-!cn":
+      - https://dns.cloudflare.com/dns-query#dns
+      - https://dns.google/dns-query#dns
 
 profile:
   store-selected: true
@@ -32,91 +57,57 @@ sniffer:
       ports: [443, 8443]
   skip-domain:
     - "Mijia Cloud"
-
-tun:
-  enable: true
-  stack: mixed
-  dns-hijack:
-    - "any:53"
-  auto-route: true
-  auto-detect-interface: true
-
-dns:
-  enable: true
-  listen: :1053
-  ipv6: true
-  enhanced-mode: fake-ip
-  fake-ip-filter:
-    - "*"
-    - "+.lan"
-    - "+.local"
-  nameserver:
-    - https://doh.pub/dns-query
-    - https://dns.alidns.com/dns-query
-  proxy-server-nameserver:
-    - https://doh.pub/dns-query
-  nameserver-policy:
-    "geosite:cn,private":
-      - https://doh.pub/dns-query
-      - https://dns.alidns.com/dns-query
-    "geosite:geolocation-!cn":
-      - "https://dns.cloudflare.com/dns-query#dns"
-      - "https://dns.google/dns-query#dns"
-
-clash-for-android:
-    append-system-dns: false
-
 # 机场
 proxy-providers:
-  ✈️ ****:
+  ✈️ 守候网络:
     type: http
-    url: "****"
+    url: "https://subs.xttlove.uk/api/v1/client/subscribe?token=7f79e47361f59563f5dcaf8bf0569de7"
     interval: 86400
-    path: ./****.yaml
+    path: ./守候网络.yaml
     health-check:
       enable: true
       interval: 600
       # lazy: true
       url: http://www.gstatic.com/generate_204
       
-  ✈️ ****:
+  ✈️ MESL:
     type: http
-    url: "****"
+    url: "https://911tg3rs.com/api/v1/client/subscribe?token=5d61547e8cee3db95187e4a69966c7f7"
     interval: 86400
-    path: ./****.yaml
+    path: ./MESL.yaml
     health-check:
       enable: true
       interval: 600
       # lazy: true
       url: http://www.gstatic.com/generate_204
 
-  ✈️ ****:
+  ✈️ CTC:
     type: http
-    url: "****"
+    url: "https://38.47.221.60:10000/api/v1/client/subscribe?token=c3076ca13c055e2fa309ce0802b955fd"
     interval: 86400
-    path: ./****.yaml
+    path: ./CTC.yaml
     health-check:
       enable: true
       interval: 600
       # lazy: true
       url: http://www.gstatic.com/generate_204
 
-  ✈️ ****:
+  ✈️ ETON:
     type: http
-    url: "****"
+    url: "https://su2024.eton.club/api/v1/client/subscribe?token=7fcf7eb9c133d33bb4ff1c0247c83fd8"
     interval: 86400
-    path: ./****.yaml
+    path: ./ETON.yaml
     health-check:
       enable: true
       interval: 600
       # lazy: true
       url: http://www.gstatic.com/generate_204
 
-  ✈️ ****:
+  ✈️ ACA:
     type: http
-    url: "*****"
+    url: "https://api.acaisbest.shop/api/v1/client/subscribe?token=208f423f5b8c7d38c8df0084389a7499"
     interval: 86400
-    path: ./****.yaml
+    path: ./ACA.yaml
     health-check:
       enable: true
       interval: 600
@@ -1128,6 +1119,14 @@ rule-providers:
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/360/360.yaml"
     path: ./RuleSet/360.yaml
     interval: 86400
+    
+# 自用游戏抓包
+  Game_acceleration:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/Yzaams/clash/main/RuleSet/%E6%B8%B8%E6%88%8F%E5%8A%A0%E9%80%9F.yaml"
+    path: ./ruleset/Game_acceleration.yaml
+    interval: 86400
 
 # 常用软件广告
   Advertising:
@@ -1175,13 +1174,6 @@ rule-providers:
     behavior: classical
     url: "https://raw.githubusercontent.com/Yzaams/clash/main/RuleSet/%E5%9B%BD%E5%86%85%E4%BB%A3%E7%90%86.yaml"
     path: ./ruleset/Media_cn.yaml
-    interval: 86400
-
-  Game_acceleration:
-    type: http
-    behavior: classical
-    url: "https://raw.githubusercontent.com/Yzaams/clash/main/RuleSet/%E6%B8%B8%E6%88%8F%E5%8A%A0%E9%80%9F.yaml"
-    path: ./ruleset/Game_acceleration.yaml
     interval: 86400
 
 # 常用域名
@@ -1417,6 +1409,7 @@ rules:
   - RULE-SET,Lan,🎯 全球直连
   - RULE-SET,Direct,🎯 全球直连
   - RULE-SET,360,🎯 全球直连
+  - RULE-SET,Game_acceleration,🎮 游戏加速
   - RULE-SET,Advertising,📵 广告拦截
   - RULE-SET,Hijacking,🍃 应用净化
   - RULE-SET,Privacy,🍃 应用净化
@@ -1450,7 +1443,6 @@ rules:
   - RULE-SET,Emby,📺 Emby
   - RULE-SET,Emby_VPN,📺 Emby
   - RULE-SET,Bahamut,🎮 Bahamut
-  - RULE-SET,Game_acceleration,🎮 游戏加速
   - RULE-SET,Game_Dwonload,🎮 游戏下载
   - RULE-SET,Game_Downloadcn,🎮 游戏下载
   - RULE-SET,gaming_platform,🎮 游戏平台
