--- a/多机场分流双图标.yaml
+++ b/多机场分流双图标.yaml
@@ -1399,6 +1399,13 @@ rule-providers:
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.yaml"
     path: ./ruleset/gaming_platform.yaml
     interval: 86400
+
+  geolocation-!cn:
+    type: http
+    behavior: domain
+    url: https://mirror.ghproxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/geolocation-!cn.yaml
+    path: ./ruleset/geolocation-!cn.yaml
+    interval: 86400
     
   Global_proxy:
     type: http
@@ -1457,6 +1464,7 @@ rules:
   - RULE-SET,Game_Dwonload,🎮 游戏下载
   - RULE-SET,Game_Downloadcn,🎮 游戏下载
   - RULE-SET,gaming_platform,🎮 游戏平台
+  - RULE-SET,geolocation-!cn,🌏 国外代理
   - RULE-SET,Global_proxy,🌏 国外代理
   - RULE-SET,CN_max,🎯 全球直连
   - GEOIP,CN,🎯 全球直连
