--- a/多机场分流双图标.yaml
+++ b/多机场分流双图标.yaml
@@ -1114,14 +1114,6 @@ rule-providers:
     path: ./RuleSet/Lan.yaml
     interval: 86400
 
-# 防误杀
-  Direct:
-    type: http
-    behavior: classical
-    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.yaml"
-    path: ./RuleSet/Direct.yaml
-    interval: 86400
-
   360:
     type: http
     behavior: classical
@@ -1138,11 +1130,11 @@ rule-providers:
     interval: 86400
 
 # 常用软件广告
-  Advertising:
+  AdvertisingLite:
     type: http
     behavior: classical
-    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising_Classical.yaml"
-    path: ./ruleset/Advertising.yaml
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AdvertisingLite/AdvertisingLite_Classical.yaml"
+    path: ./ruleset/AdvertisingLite.yaml
     interval: 86400
 
 # 反劫持
@@ -1419,7 +1411,7 @@ rules:
   - RULE-SET,Direct,🎯 全球直连
   - RULE-SET,360,🎯 全球直连
   - RULE-SET,Game_acceleration,🎮 游戏加速
-  - RULE-SET,Advertising,📵 广告拦截
+  - RULE-SET,AdvertisingLite,📵 广告拦截
   - RULE-SET,Hijacking,🍃 应用净化
   - RULE-SET,Privacy,🍃 应用净化
   - RULE-SET,BlockHttpDNS,🍃 应用净化
